# Flight-Guard

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
api/: __init__.py  app.py  wsgi.py
app/: __init__.py  cache.py  config.py  database.py  features.py  forecasting.py  main.py  middleware.py  model.py  monitoring.py  schemas.py  similarity.py  tracking.py
docker/: Dockerfile  docker-compose.yml
examples/: predict_example.py
foundry/: __init__.py  foundry_client.py
foundry/tests/: test_foundry_client.py
migrations/: env.py
migrations/versions/: 001_initial_schema.py
models/: __init__.py
models/ensemble/: __init__.py  delay_predictor.py
models/risk/: __init__.py  carrier_risk_scorer.py
monitoring/: __init__.py  drift_monitor.py
pipeline/: __init__.py  feature_engineering.py
pipeline/airflow/: __init__.py  retrain_dag.py
pipelines/: retrain_dag.py
scripts/: generate_diagram.py  seed_data.py  train.py
tests/: __init__.py  conftest.py  test_api.py  test_config_cache.py  test_database.py  test_feature_engineering.py  test_features.py  test_forecasting.py  test_middleware.py  test_model.py  test_monitoring.py  test_similarity.py  test_tracking.py
